--- a/app/src/main/res/layout/recipe_card.xml
+++ b/app/src/main/res/layout/recipe_card.xml
@@ -24,7 +24,7 @@
 
             <ImageView
                 android:id="@+id/recipeImg"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="236dp"
                 android:src="@drawable/noodles_test"
                 android:cropToPadding="true"
