--- a/app/src/main/res/layout/fragment_new_recipe.xml
+++ b/app/src/main/res/layout/fragment_new_recipe.xml
@@ -156,14 +156,15 @@
     </ScrollView>
 
     <Button
+        android:id="@+id/addRecipeButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Done"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:text="Done"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
     </Button>
 
