--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,6 +49,11 @@
             app:nullable="true"
             android:defaultValue="@null"
             />
+        <action
+            android:id="@+id/newRecipeFragmentToEditIngredientFragment"
+            app:destination="@id/editIngredientFragment"
+            app:popUpTo="@id/editIngredientFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/addIngredientFragment"
@@ -61,5 +66,17 @@
             app:popUpToInclusive="true"
             >
         </action>
+    </fragment>
+    <fragment
+        android:id="@+id/editIngredientFragment"
+        android:name="com.ltl.recipes.ui.EditIngredientFragment"
+        android:label="EditIngredientFragment" >
+        <argument
+            android:name="ingredientEditExtra"
+            app:argType="com.ltl.recipes.ingredient.Ingredient"
+            />
+        <action
+            android:id="@+id/editIngredientFragmentToNewRecipeFragment"
+            app:destination="@id/newRecipeFragment" />
     </fragment>
 </navigation>
