--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/mainFragment"
@@ -72,5 +72,14 @@
             android:id="@+id/editIngredientFragmentToNewRecipeFragment"
             app:popUpTo="@id/newRecipeFragment"
             />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.ltl.recipes.ui.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/loginFragmentToMainFragment"
+            app:destination="@id/mainFragment" />
     </fragment>
 </navigation>
