feat: add account button

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -22,6 +22,12 @@
         android:title="Search"
         app:showAsAction="always"/>
 
+    <item
+        android:id="@+id/accountMenuButton"
+        android:icon="@drawable/ic_baseline_account_circle_24"
+        android:title="Account"
+        app:showAsAction="always"/>
+
 
 
 </menu>
