--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,6 +31,9 @@
             app:destination="@id/mainFragment"
             app:popUpTo="@id/mainFragment"
             app:popUpToInclusive="true"/>
+        <argument
+            android:name="recipeAttr"
+            app:argType="com.ltl.recipes.data.recipe.Recipe" />
     </fragment>
     <fragment
         android:id="@+id/newRecipeFragment"
