fix: after adding new ingredient go return to NewRecipeFragment.kt

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -56,6 +56,11 @@
             app:popUpTo="@id/editIngredientFragment"
             app:popUpToInclusive="true"
             />
+        <argument
+            android:name="currentRecipe"
+            app:argType="com.ltl.recipes.data.recipe.Recipe"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/addIngredientFragment"
