feat: add editRecipe option layout

--- a/app/src/main/res/layout/recipe_actions_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/recipe_actions_bottom_sheet_dialog.xml
@@ -8,6 +8,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:id="@+id/editLayout"
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="8dp">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_baseline_edit_24"
+            android:layout_margin="8dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/edit_recipe_text"
+            android:layout_gravity="center_vertical"
+            android:padding="8dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:id="@+id/deleteLayout"
         android:background="?android:attr/selectableItemBackground"
         android:padding="8dp">
