fix: load img from NewRecipeViewModel.imgRef

--- a/app/src/main/res/layout/fragment_new_recipe.xml
+++ b/app/src/main/res/layout/fragment_new_recipe.xml
@@ -17,7 +17,21 @@
         android:orientation="vertical"
         tools:context=".ui.NewRecipeFragment">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            />
+
         <ScrollView
+            android:id="@+id/newRecipeScrollLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout_editor_absoluteX="16dp"
