--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="seed">#B1DCF0</color>
+    <color name="md_theme_light_primary">#006782</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#BBE9FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#001F29</color>
+    <color name="md_theme_light_secondary">#646100</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#ECE76D</color>
+    <color name="md_theme_light_onSecondaryContainer">#1E1D00</color>
+    <color name="md_theme_light_tertiary">#006782</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#BBE9FF</color>
+    <color name="md_theme_light_onTertiaryContainer">#001F29</color>
+    <color name="md_theme_light_error">#9B4055</color>
+    <color name="md_theme_light_errorContainer">#FFD9DE</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#3F0015</color>
+    <color name="md_theme_light_background">#FBFCFE</color>
+    <color name="md_theme_light_onBackground">#191C1E</color>
+    <color name="md_theme_light_outline">#70787D</color>
+    <color name="md_theme_light_inverseOnSurface">#EFF1F3</color>
+    <color name="md_theme_light_inverseSurface">#2E3132</color>
+    <color name="md_theme_light_inversePrimary">#60D4FE</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#006782</color>
+    <color name="md_theme_light_outlineVariant">#C0C8CC</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_light_surface">#F8F9FB</color>
+    <color name="md_theme_light_onSurface">#191C1E</color>
+    <color name="md_theme_light_surfaceVariant">#DCE4E8</color>
+    <color name="md_theme_light_onSurfaceVariant">#40484C</color>
+    <color name="error">#F0C9CE</color>
+    <color name="md_theme_dark_primary">#60D4FE</color>
+    <color name="md_theme_dark_onPrimary">#003545</color>
+    <color name="md_theme_dark_primaryContainer">#004D63</color>
+    <color name="md_theme_dark_onPrimaryContainer">#BBE9FF</color>
+    <color name="md_theme_dark_secondary">#CFCB55</color>
+    <color name="md_theme_dark_onSecondary">#333200</color>
+    <color name="md_theme_dark_secondaryContainer">#4B4900</color>
+    <color name="md_theme_dark_onSecondaryContainer">#ECE76D</color>
+    <color name="md_theme_dark_tertiary">#60D4FE</color>
+    <color name="md_theme_dark_onTertiary">#003545</color>
+    <color name="md_theme_dark_tertiaryContainer">#004D63</color>
+    <color name="md_theme_dark_onTertiaryContainer">#BBE9FF</color>
+    <color name="md_theme_dark_error">#FFB2BE</color>
+    <color name="md_theme_dark_errorContainer">#7D293E</color>
+    <color name="md_theme_dark_onError">#5F1128</color>
+    <color name="md_theme_dark_onErrorContainer">#FFD9DE</color>
+    <color name="md_theme_dark_background">#191C1E</color>
+    <color name="md_theme_dark_onBackground">#E1E3E4</color>
+    <color name="md_theme_dark_outline">#8A9296</color>
+    <color name="md_theme_dark_inverseOnSurface">#191C1E</color>
+    <color name="md_theme_dark_inverseSurface">#E1E3E4</color>
+    <color name="md_theme_dark_inversePrimary">#006782</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#60D4FE</color>
+    <color name="md_theme_dark_outlineVariant">#40484C</color>
+    <color name="md_theme_dark_scrim">#000000</color>
+    <color name="md_theme_dark_surface">#111415</color>
+    <color name="md_theme_dark_onSurface">#C5C7C8</color>
+    <color name="md_theme_dark_surfaceVariant">#40484C</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C0C8CC</color>
 </resources>
